# xvector

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-build.sh
cmake/: fetch-external.cmake
example/: CMakeLists.txt  embeddings.py  example.c  example_catch2.cpp  helper.cpp
java/: CMakeLists.txt
java/com/metisx/xvector/: Buffer.java  Context.java  Filter.java  IndexArray.java  KnnQuery.java  KnnResult.java  OpType.java  Query.java  VectorArray.java
java/example/: CMakeLists.txt  DataType.java  Npy.java  NpyHeader.java  QueryVectors.java  XVectorExample.java
java/native/: .gitignore  CMakeLists.txt  com_metisx_xvector_Buffer.cpp  com_metisx_xvector_Buffer.h  com_metisx_xvector_Context.cpp  com_metisx_xvector_Context.h  com_metisx_xvector_Filter.cpp  com_metisx_xvector_Filter.h  com_metisx_xvector_IndexArray.cpp  com_metisx_xvector_IndexArray.h  com_metisx_xvector_KnnQuery.cpp  com_metisx_xvector_KnnQuery.h  com_metisx_xvector_KnnResult.cpp  com_metisx_xvector_KnnResult.h  com_metisx_xvector_Query.cpp  com_metisx_xvector_Query.h  com_metisx_xvector_VectorArray.cpp  com_metisx_xvector_VectorArray.h  throw_exception.cpp  throw_exception.hpp
src/: CMakeLists.txt  xvector.hpp
src/xvec_buffer/: xvec_buffer.hpp  xvec_buffer_impl.cpp
test/: CMakeLists.txt  xvec_test_context.c  xvec_test_vector_array.c
ut/: CMakeLists.txt  xvector_test.cpp
xvector/: .gitignore  CMakeLists.txt  shared_ptr.hpp  spin_lock.hpp  xvec_buffer.cpp  xvec_buffer.h  xvec_context.cpp  xvec_context.h  xvec_distance_query.cpp  xvec_distance_query.h  xvec_distance_result.cpp  xvec_distance_result.h  xvec_filter.cpp  xvec_filter.h  xvec_float_type.h  xvec_identifier.h  xvec_index_array.cpp  xvec_knn_query.cpp  xvec_knn_query.h  xvec_knn_result.cpp  xvec_knn_result.h  xvec_query.cpp  xvec_query.h  xvec_vector_array.cpp  xvec_vector_array.h  xvector.h
xvector/core/: CMakeLists.txt  context_base.cpp  context_base.hpp  device_buffer_base.cpp  device_buffer_base.hpp  distance_query_base.cpp  distance_query_base.hpp  distance_result_base.cpp  distance_result_base.hpp  filter_base.cpp  filter_base.hpp  index_array_base.cpp  index_array_base.hpp  knn_query_base.cpp  knn_query_base.hpp  knn_result_base.cpp  knn_result_base.hpp  object.cpp  object.hpp  vector_array_base.cpp  vector_array_base.hpp
xvector/detail/: buffer.hpp  context.hpp  context_base.cpp  context_base.hpp  device_buffer.hpp  device_buffer_base.cpp  device_buffer_base.hpp  distance_query.hpp  distance_query_base.cpp  distance_query_base.hpp  distance_result.hpp  distance_result_base.cpp  distance_result_base.hpp  factory.hpp  filter.hpp  filter_base.cpp  filter_base.hpp  host_buffer.hpp  index_array.hpp  index_array_base.cpp  index_array_base.hpp  knn_query.hpp  knn_query_base.cpp  knn_query_base.hpp  knn_result.hpp  knn_result_base.cpp  knn_result_base.hpp  knn_search.cpp  knn_search.hpp  managed.hpp  object.cpp  object.hpp  shared_ptr.hpp  spin_lock.hpp  vector_array.hpp  vector_array_base.cpp  vector_array_base.hpp
xvector/detail/cpu/: cpu_context.cpp  cpu_context.hpp  cpu_device_buffer.cpp  cpu_device_buffer.hpp  cpu_distance_query.cpp  cpu_distance_query.hpp  cpu_distance_result.cpp  cpu_distance_result.hpp  cpu_filter.cpp  cpu_filter.hpp  cpu_host_buffer.cpp  cpu_host_buffer.hpp  cpu_index_array.cpp  cpu_index_array.hpp  cpu_knn_query.cpp  cpu_knn_query.hpp  cpu_knn_result.cpp  cpu_knn_result.hpp  cpu_query.cpp  cpu_query.hpp  cpu_vector_array.cpp  cpu_vector_array.hpp
xvector/detail/cpu/half_float/: umHalf.h
xvector/detail/mu/: mu_device_buffer.cpp  mu_device_buffer.hpp
xvector/inc/: xvec_status.h  xvector.h
xvector/include/xvector/: xvec_buffer.h  xvec_context.h  xvec_distance_query.h  xvec_distance_result.h  xvec_filter.h  xvec_index.h  xvec_index_array.h  xvec_internal.h  xvec_knn_query.h  xvec_knn_result.h  xvec_op_type.h  xvec_query.h  xvec_status.h  xvec_target_type.h  xvec_vector_array.h  xvector.h
xvector/mu/kernel/: xvector-kernel.mo  xvector-mu.mo
xvector/sim/: CMakeLists.txt  context.cpp  context.hpp  device_buffer.cpp  device_buffer.hpp  distance_query.cpp  distance_query.hpp  distance_result.cpp  distance_result.hpp  factory.hpp  filter.cpp  filter.hpp  index_array.cpp  index_array.hpp  knn_query.cpp  knn_query.hpp  knn_result.cpp  knn_result.hpp  managed.hpp  query.cpp  query.hpp  vector_array.cpp  vector_array.hpp  xvec_buffer.cpp  xvec_context.cpp  xvec_distance_query.cpp  xvec_distance_result.cpp  xvec_filter.cpp  xvec_index_array.cpp  xvec_knn_query.cpp  xvec_knn_result.cpp  xvec_query.cpp  xvec_vector_array.cpp
xvector/sim/half_float/: half_float.hpp  umHalf.inl
xvector/src/: CMakeLists.txt  xvector.cpp
xvector/src/xvec_buffer/: CMakeLists.txt  xvec_buffer_impl.hpp  xvec_buffer_template.hpp
xvector/ut/: CMakeLists.txt  test_main.cpp  xvector_test.cpp
